# WEB_CRAWLER

./: .gitignore  pyproject.toml
app/notebooks/: exp1.ipynb
app/scrapper/: scrapper.py
