[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = "Webcrawler wikipedia"
authors = ["nilton seixas <nfsseixas@gmail.com>"]
readme = "README.md"
packages = [{include = "web_crawler"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
